--- a/.github/workflows/macos-test.yml
+++ b/.github/workflows/macos-test.yml
@@ -2,9 +2,9 @@ name: macOS Electron + C# Validation
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   macos-test:
